[gd_scene load_steps=11 format=3 uid="uid://bj0a6q36u4dhq"]

[ext_resource type="Texture2D" uid="uid://d3qkhwyvmk23s" path="res://sprites/character/character_body.png" id="1_4hdnt"]
[ext_resource type="Script" path="res://scenes/interface/character_creator/character_creator.gd" id="1_mvh88"]
[ext_resource type="Texture2D" uid="uid://cle1g6rewx615" path="res://sprites/character/character_eyes.png" id="2_0j1rf"]
[ext_resource type="Texture2D" uid="uid://pfsuxg81uyb7" path="res://sprites/character/character_underparts.png" id="3_7msgl"]
[ext_resource type="Texture2D" uid="uid://c65w61jxfp5n5" path="res://sprites/character/character_scarfs.png" id="4_e7s7f"]
[ext_resource type="Texture2D" uid="uid://yhwaitmui3nh" path="res://sprites/character/character_arms.png" id="6_1fb1l"]
[ext_resource type="Texture2D" uid="uid://cto7u4ihl4i2t" path="res://sprites/character/character_tails.png" id="7_diknj"]

[sub_resource type="Animation" id="Animation_xhrrj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BodySprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(212.5, 368.5)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("EyeSprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(212.5, 368.5)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("UnderpartSprite:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(212.5, 368.5)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("ArmSprite:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(212.5, 368.5)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("ScarfSprite:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(212.5, 368.5)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("TailSprite:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(358, 416)]
}

[sub_resource type="Animation" id="Animation_fqis0"]
resource_name = "loop"
length = 0.6
loop_mode = 1
step = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BodySprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.199, 0.2, 0.4, 0.402),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(212.5, 368.5), Vector2(212.5, 368.5), Vector2(212.5, 368.5), Vector2(212.5, 368.5), Vector2(212.5, 368.5)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("EyeSprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.199, 0.2, 0.4, 0.402),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(212.5, 368.5), Vector2(212.5, 368.5), Vector2(212.5, 378), Vector2(212.5, 378), Vector2(212.5, 368.5)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("UnderpartSprite:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.199, 0.2, 0.4, 0.402),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(212.5, 368.5), Vector2(212.5, 368.5), Vector2(212.5, 378), Vector2(212.5, 378), Vector2(212.5, 368.5)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("ArmSprite:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.199, 0.2, 0.4, 0.402),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(64, 418), Vector2(64, 418), Vector2(64, 427), Vector2(64, 427), Vector2(64, 418)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("ScarfSprite:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.199, 0.2, 0.4, 0.402),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(212.5, 368.5), Vector2(212.5, 368.5), Vector2(212.5, 378), Vector2(212.5, 378), Vector2(212.5, 368.5)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("TailSprite:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.199, 0.2, 0.4, 0.402),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(330, 416), Vector2(330, 416), Vector2(330, 423), Vector2(330, 423), Vector2(330, 416)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tmfik"]
_data = {
"RESET": SubResource("Animation_xhrrj"),
"loop": SubResource("Animation_fqis0")
}

[node name="CharacterCreator" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mvh88")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.14902, 0.14902, 0.14902, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 17.0
offset_top = 12.0
offset_right = 663.0
offset_bottom = 70.0

[node name="Back" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(171, 0)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 0, 1)
theme_override_colors/font_hover_color = Color(1, 1, 0, 1)
theme_override_font_sizes/font_size = 32
text = "VOLTAR"

[node name="Control" type="Control" parent="HBoxContainer"]
custom_minimum_size = Vector2(41, 0)
layout_mode = 2

[node name="Randomize" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(257, 0)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 0, 1)
theme_override_colors/font_hover_color = Color(1, 1, 0, 1)
theme_override_font_sizes/font_size = 32
text = "ALEATORIZAR"

[node name="Control2" type="Control" parent="HBoxContainer"]
layout_mode = 2

[node name="Reset" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 0, 1)
theme_override_colors/font_hover_color = Color(1, 1, 0, 1)
theme_override_font_sizes/font_size = 32
text = "PADR√ÉO"

[node name="CharacterPreview" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -468.0
offset_top = -624.0
offset_right = -28.0
offset_bottom = -24.0
grow_horizontal = 0
grow_vertical = 0

[node name="BodySprite" type="Sprite2D" parent="CharacterPreview"]
texture_filter = 1
position = Vector2(212.5, 368.5)
scale = Vector2(8, 8)
texture = ExtResource("1_4hdnt")
hframes = 13

[node name="EyeSprite" type="Sprite2D" parent="CharacterPreview"]
texture_filter = 1
position = Vector2(212.5, 368.5)
scale = Vector2(8, 8)
texture = ExtResource("2_0j1rf")
hframes = 15

[node name="UnderpartSprite" type="Sprite2D" parent="CharacterPreview"]
texture_filter = 1
position = Vector2(212.5, 368.5)
scale = Vector2(8, 8)
texture = ExtResource("3_7msgl")
hframes = 15
frame = 1

[node name="ScarfSprite" type="Sprite2D" parent="CharacterPreview"]
texture_filter = 1
position = Vector2(212.5, 368.5)
scale = Vector2(8, 8)
texture = ExtResource("4_e7s7f")
hframes = 15
frame = 1

[node name="ArmSprite" type="Sprite2D" parent="CharacterPreview"]
texture_filter = 1
position = Vector2(212.5, 368.5)
rotation = 3.73794
scale = Vector2(7, 7)
texture = ExtResource("6_1fb1l")
hframes = 15

[node name="TailSprite" type="Sprite2D" parent="CharacterPreview"]
texture_filter = 1
position = Vector2(358, 416)
scale = Vector2(7, 7)
texture = ExtResource("7_diknj")
hframes = 5
frame = 1

[node name="Animation" type="AnimationPlayer" parent="CharacterPreview"]
libraries = {
"": SubResource("AnimationLibrary_tmfik")
}
autoplay = "loop"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 37.0
offset_top = 121.0
offset_right = 662.0
offset_bottom = 623.0

[node name="NicknameContainer" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 59)
layout_mode = 2

[node name="Name" type="Label" parent="VBoxContainer/NicknameContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "NICKNAME"

[node name="Spacer" type="Control" parent="VBoxContainer/NicknameContainer"]
custom_minimum_size = Vector2(32, 0)
layout_mode = 2

[node name="NicknameEditor" type="TextEdit" parent="VBoxContainer/NicknameContainer"]
custom_minimum_size = Vector2(375, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 32
placeholder_text = "PLAYER3425224"

[node name="Spacer" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 19)
layout_mode = 2

[node name="BodyContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Name" type="Label" parent="VBoxContainer/BodyContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "CORPO"

[node name="Spacer" type="Control" parent="VBoxContainer/BodyContainer"]
custom_minimum_size = Vector2(97, 0)
layout_mode = 2

[node name="ColorPicker" type="ColorPickerButton" parent="VBoxContainer/BodyContainer"]
custom_minimum_size = Vector2(379, 0)
layout_mode = 2

[node name="EyesContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Name" type="Label" parent="VBoxContainer/EyesContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "OLHOS"

[node name="Spacer" type="Control" parent="VBoxContainer/EyesContainer"]
custom_minimum_size = Vector2(99, 0)
layout_mode = 2

[node name="Selector" type="HBoxContainer" parent="VBoxContainer/EyesContainer"]
layout_mode = 2

[node name="LeftButton" type="Button" parent="VBoxContainer/EyesContainer/Selector"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "<"

[node name="Value" type="Label" parent="VBoxContainer/EyesContainer/Selector"]
custom_minimum_size = Vector2(70, 49)
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RightButton" type="Button" parent="VBoxContainer/EyesContainer/Selector"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = ">"

[node name="Spacer2" type="Control" parent="VBoxContainer/EyesContainer"]
custom_minimum_size = Vector2(26, 0)
layout_mode = 2

[node name="ColorPicker" type="ColorPickerButton" parent="VBoxContainer/EyesContainer"]
custom_minimum_size = Vector2(108, 0)
layout_mode = 2

[node name="UnderpartContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Name" type="Label" parent="VBoxContainer/UnderpartContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "CUECA"

[node name="Spacer" type="Control" parent="VBoxContainer/UnderpartContainer"]
custom_minimum_size = Vector2(107, 0)
layout_mode = 2

[node name="Selector" type="HBoxContainer" parent="VBoxContainer/UnderpartContainer"]
layout_mode = 2

[node name="LeftButton" type="Button" parent="VBoxContainer/UnderpartContainer/Selector"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "<"

[node name="Value" type="Label" parent="VBoxContainer/UnderpartContainer/Selector"]
custom_minimum_size = Vector2(70, 49)
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RightButton" type="Button" parent="VBoxContainer/UnderpartContainer/Selector"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = ">"

[node name="Spacer2" type="Control" parent="VBoxContainer/UnderpartContainer"]
custom_minimum_size = Vector2(26, 0)
layout_mode = 2

[node name="ColorPicker" type="ColorPickerButton" parent="VBoxContainer/UnderpartContainer"]
custom_minimum_size = Vector2(108, 0)
layout_mode = 2

[node name="ScarfContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Name" type="Label" parent="VBoxContainer/ScarfContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "CACHECOL"

[node name="Spacer" type="Control" parent="VBoxContainer/ScarfContainer"]
custom_minimum_size = Vector2(29, 0)
layout_mode = 2

[node name="Selector" type="HBoxContainer" parent="VBoxContainer/ScarfContainer"]
layout_mode = 2

[node name="LeftButton" type="Button" parent="VBoxContainer/ScarfContainer/Selector"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "<"

[node name="Value" type="Label" parent="VBoxContainer/ScarfContainer/Selector"]
custom_minimum_size = Vector2(70, 49)
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RightButton" type="Button" parent="VBoxContainer/ScarfContainer/Selector"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = ">"

[node name="Spacer2" type="Control" parent="VBoxContainer/ScarfContainer"]
custom_minimum_size = Vector2(26, 0)
layout_mode = 2

[node name="ColorPicker" type="ColorPickerButton" parent="VBoxContainer/ScarfContainer"]
custom_minimum_size = Vector2(108, 0)
layout_mode = 2

[node name="ArmContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Name" type="Label" parent="VBoxContainer/ArmContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "BRA√áO"

[node name="Spacer" type="Control" parent="VBoxContainer/ArmContainer"]
custom_minimum_size = Vector2(101, 0)
layout_mode = 2

[node name="Selector" type="HBoxContainer" parent="VBoxContainer/ArmContainer"]
layout_mode = 2

[node name="LeftButton" type="Button" parent="VBoxContainer/ArmContainer/Selector"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "<"

[node name="Value" type="Label" parent="VBoxContainer/ArmContainer/Selector"]
custom_minimum_size = Vector2(70, 49)
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RightButton" type="Button" parent="VBoxContainer/ArmContainer/Selector"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = ">"

[node name="Spacer2" type="Control" parent="VBoxContainer/ArmContainer"]
custom_minimum_size = Vector2(26, 0)
layout_mode = 2

[connection signal="button_up" from="VBoxContainer/EyesContainer/Selector/LeftButton" to="." method="_on_left_eyes_button_up"]
[connection signal="button_up" from="VBoxContainer/EyesContainer/Selector/RightButton" to="." method="_on_right_eyes_button_up"]
[connection signal="button_up" from="VBoxContainer/UnderpartContainer/Selector/LeftButton" to="." method="_on_left_underpart_button_up"]
[connection signal="button_up" from="VBoxContainer/UnderpartContainer/Selector/RightButton" to="." method="_on_right_underpart_button_up"]
[connection signal="button_up" from="VBoxContainer/ScarfContainer/Selector/LeftButton" to="." method="_on_left_scarf_button_up"]
[connection signal="button_up" from="VBoxContainer/ScarfContainer/Selector/RightButton" to="." method="_on_right_scarf_button_up"]
[connection signal="button_up" from="VBoxContainer/ArmContainer/Selector/LeftButton" to="." method="_on_left_arm_button_up"]
[connection signal="button_up" from="VBoxContainer/ArmContainer/Selector/RightButton" to="." method="_on_right_arm_button_up"]
